--- a/index.html
+++ b/index.html
@@ -75,9 +75,7 @@
       </div>
 
       <section class="about">
-        <div class="top-img">
-          <img src="images/image-about-dark.jpg" alt="Furniture" />
-        </div>
+        <div class="top-img about-img"></div>
         <div class="about-content">
           <h3>About our Furniture</h3>
           <p>
@@ -89,9 +87,7 @@
             help you create your dream space
           </p>
         </div>
-        <div class="bottom-img">
-          <img src="images/image-about-light.jpg" alt="Furniture" />
-        </div>
+        <div class="bottom-img about-img"></div>
       </section>
     </main>
     <script src="js/main.js"></script>
