--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
 
   <body>
-    <header class="header">
+    <header class="header flexcenter">
       <div class="header__toggle" id="menu-open">
         <img src="images/icon-hamburger.svg" alt="Menu icon open" />
       </div>
